<resources>
    <string name="app_name">WatchList</string>
    <string name="title_home">Мои</string>
    <string name="title_feed">Лента</string>
    <string name="title_trends">Тренды</string>
    <string name="title_more">Ещё</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_watched">Watched</string>
    <string name="tab_wish_list">Wish List</string>
    <string name="tab_global">Global</string>
    <string name="login_button_text">Вход</string>
    <string name="login_button_loading">Авторизация…</string>
    <string name="password_hint">Пароль</string>
    <string name="username_hint">Имя пользователя</string>
    <string name="register_link">Ещё не зарегистрированы?</string>
    <string name="category_all">Все</string>
    <string name="category_films">Фильмы</string>
    <string name="category_series">Сериалы</string>
    <string name="category_anime">Аниме</string>
    <string name="register">Регистрация</string>
    <string name="email_hint">Email</string>
    <string name="password_repeat_hint">Повторите пароль</string>
    <string name="register_button_text">Зарегистрироваться</string>
    <string name="no_items_message">В этой категории ещё нет элементов</string>
    <string name="string_note">Заметка</string>
    <string name="avatar_description">avatar</string>
    <string name="stats_feature_comment">/* Здесь появится статистика пользователя */</string>
</resources>
