<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.chip.ChipGroup xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cg_categories"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    app:selectionRequired="true"
    app:singleLine="true"
    app:singleSelection="true">

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:text="@string/category_all" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_films"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:text="@string/category_films" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:text="@string/category_series" />

    <com.google.android.material.chip.Chip
        android:id="@+id/chip_anime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="true"
        android:text="@string/category_anime" />
</com.google.android.material.chip.ChipGroup>
