<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="dev.procrastineyaz.watchlist.ui.main.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_add_item"
            app:destination="@id/navigation_add_item" />
        <action
            android:id="@+id/action_navigation_home_to_item_details"
            app:destination="@id/navigation_item_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_feed"
        android:name="dev.procrastineyaz.watchlist.ui.main.feed.FeedFragment"
        android:label="@string/title_feed"
        tools:layout="@layout/fragment_feed" />

    <fragment
        android:id="@+id/navigation_trends"
        android:name="dev.procrastineyaz.watchlist.ui.main.trends.TrendsFragment"
        android:label="@string/title_trends"
        tools:layout="@layout/fragment_trends" />
    <fragment
        android:id="@+id/navigation_more"
        android:name="dev.procrastineyaz.watchlist.ui.main.more.MoreFragment"
        android:label="@string/title_more"
        tools:layout="@layout/fragment_more" />
    <dialog
        android:id="@+id/navigation_add_item"
        android:name="dev.procrastineyaz.watchlist.ui.main.common.AddItemDialogFragment"
        tools:layout="@layout/fragment_add_item"
        android:label="AddItemDialogFragment" >
        <argument
            android:name="category"
            app:argType="dev.procrastineyaz.watchlist.data.dto.Category"
            android:defaultValue="UNKNOWN" />
        <argument
            android:name="seen"
            app:argType="boolean" />
    </dialog>
    <fragment
        android:id="@+id/navigation_item_details"
        android:name="dev.procrastineyaz.watchlist.ui.main.item_view.ItemDetailsFragment"
        android:label="Item Details"
        tools:layout="@layout/fragment_item_details" >
        <argument
            android:name="item"
            app:argType="dev.procrastineyaz.watchlist.data.dto.Item" />
    </fragment>
</navigation>
