<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <import type="dev.procrastineyaz.watchlist.data.dto.Result"/>
        <variable name="viewModel" type="dev.procrastineyaz.watchlist.ui.register.RegisterViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.register.RegisterActivity">

        <TextView
            android:id="@+id/tv_register_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/register"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            android:textSize="32sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_username"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toTopOf="@id/til_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_register_text"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username_hint"
                android:text="@={viewModel.username}"
                android:inputType="textVisiblePassword"
                android:maxLines="1"
                android:nextFocusForward="@id/et_email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@id/til_password"
            app:layout_constraintEnd_toEndOf="@+id/til_username"
            app:layout_constraintStart_toStartOf="@+id/til_username"
            app:layout_constraintTop_toBottomOf="@+id/til_username"
            app:layout_constraintVertical_chainStyle="packed">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_hint"
                android:text="@={viewModel.email}"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:nextFocusForward="@id/et_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@id/til_password_repeat"
            app:layout_constraintEnd_toEndOf="@+id/til_username"
            app:layout_constraintStart_toStartOf="@+id/til_username"
            app:layout_constraintTop_toBottomOf="@+id/til_email"
            app:layout_constraintVertical_chainStyle="packed"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:text="@={viewModel.password}"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_password_repeat"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_register"
            app:layout_constraintEnd_toEndOf="@+id/til_username"
            app:layout_constraintStart_toStartOf="@+id/til_username"
            app:layout_constraintTop_toBottomOf="@+id/til_password"
            app:layout_constraintVertical_chainStyle="packed"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_repeat_hint"
                android:text="@={viewModel.passwordRepeat}"
                android:inputType="textPassword"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.result.isLoading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/btn_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_password_repeat" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/register_button_text"
            android:enabled="@{!viewModel.result.isLoading}"
            android:onClick="@{() -> viewModel.onRegisterBtnClick()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1,6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

        </com.google.android.material.button.MaterialButton>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
